--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,14 @@ dependencies:
 
 dev_dependencies: 
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
   flutter_test: 
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/otakudev.png"
 
 flutter: 
   assets:
